k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo
  namespace: jenkins-k8s
spec:
  selector:
    matchLabels:
      name: testdj
  replicas: 1
  template:
    metadata:
      labels:
        name: testdj
    spec:
      containers:
        - name: testdj
          image: firexuxiaoman/python-demo:<BUILD_TAG>
          ports:
            - containerPort: 8000
              name: port
              protocol: TCP
          command: ["/bin/sh"]
          args: ["-c", "python manage.py runserver 0.0.0.0:8000"]
          volumeMounts:
            - mountPath: /opt/test_dj/log
              name: log
      volumes:
        - name: log
          hostPath:
            path: /var/log/k8s/test_dj
