k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-demo
  namespace: jenkins-k8s
spec:
  selector:
    name: testdj
  ports:
  - port: 8000
