k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testdj-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: python.demo.com
    http:
      paths:
      - path: /admin
        backend:
          serviceName: python-demo
          servicePort: 8000
